# Python_lab8

./: .dockerignore  Dockerfile  Dockerfile.test  README.md  pyproject.toml
source/: tasks.jsonl
src/: cli.py
src/contracts/: task.py  task_source.py
src/inbox/: core.py
src/sources/: json.py  stdin.py
src/task_queue/: task_queue.py
tests/: test.py
